fixed search result display on mobile

--- a/ecommerce-react/src/App.css
+++ b/ecommerce-react/src/App.css
@@ -546,21 +546,24 @@ img {
 }
 .result_item {
   width: 100%;
-  height: 50vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
   border-top: 1.5px solid rgb(178, 175, 175);
 }
-.result_item img {
+.result_item--img {
   width: 15%;
   height: 70%;
+}
+.result_item--img p {
+  display: none;
 }
 .result_item--info {
   width: 70%;
   display: flex;
   flex-direction: column;
   align-items: start;
+  padding: 2% 0;
 }
 
 
@@ -706,5 +709,27 @@ img {
   }
   #payment_message {
     font-size: 1.3rem;
+  }
+  .result_item {
+    flex-direction: column;
+  }
+  .result_item--img {
+    margin-top: 10px;
+    width: 80%;
+    height: 30%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .result_item--img img {
+    width: 30%;
+  }
+  .result_item--img p {
+    display: block;
+  }
+  .result_item--info :nth-child(1) {
+    display: none;
+  }
+  .result_item--info :nth-child(3) {
+    margin-top: 0;
   }
 }
